--- a/pages/BanhMi.html
+++ b/pages/BanhMi.html
@@ -22,12 +22,33 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse centerJ" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                            <a class="nav-link yellowJ" href="../index.html">Logo/Home</a>
-                            <a class="nav-link yellowJ" href="./Menu.html">Menu</a>
-                            <a class="nav-link yellowJ" href="./ContactUs.html">Contact Us</a>
-                            <a class="nav-link yellowJ" aria-current="page" href="./AboutUs.html">About Us</a>
-                            <a class="nav-link yellowJ" href="./BanhMi.html">Banh Mi?</a>
+                        <div class="" style="width: 100%;">
+                            <div class="row">
+                                <div class="col centerJ">
+                                    <div class="row evenJ" style="width: 700px; padding-top: 40px;">
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ" style="width: 75px;"
+                                            href="./Menu.html">Menu</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ" style="width: 145px;"
+                                            href="./ContactUs.html">Contact Us</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ" style="width: 125px;"
+                                            aria-current="page" href="./AboutUs.html">About
+                                            Us</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ" style="width: 120px;"
+                                            href="./BanhMi.html">Banh Mi?</a>
+                                    </div>
+                                </div>
+
+                                <div class="col-1 centerJ">
+                                    <a href="../index.html"><img class="logoSizeJ" src="../assets/bestSandwich logo.png"
+                                            alt=""></a>
+                                </div>
+                                <div class="col yugiJ alignCenterJ">
+                                    <h1 style="width: 100%" class="txtCenterJ titleFontJ yellowJ">Best Sandwiches &
+                                        Smothies</h1>
+                                </div>
+
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -42,8 +63,8 @@
                 <img src="../assets/banh mi in ellipse.png" alt="Picture of Chef">
             </div>
             <div class="col">
-                <h2>What’s A Banh Mi?</h2>
-                <p>Welcome to Best Sandwiches & Smoothies, where Banh mi is not just a sandwich but a culinary
+                <h2 class="abrilFatfaceJ">What’s A Banh Mi?</h2>
+                <p class="sansCollectionJ">Welcome to Best Sandwiches & Smoothies, where Banh mi is not just a sandwich but a culinary
                     masterpiece that tells the tale of Vietnam's rich flavors. Nestled in the heart of 3330 E Hammer Ln
                     Ste C Stockton, CA 95212, our restaurant is a homage to the bustling street food scene of Hanoi. At
                     Best Sandwiches & Smoothies, we take pride in curating an authentic experience, from the crackling
