--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -24,17 +24,16 @@
                     <div class="collapse navbar-collapse centerJ" id="navbarNavAltMarkup">
                         <div class="" style="width: 100%;">
                             <div class="row">
-
                                 <div class="col centerJ">
                                     <div class="row evenJ" style="width: 700px; padding-top: 40px;">
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 75px;"
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ" style="width: 75px;"
                                             href="./Menu.html">Menu</a>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 140px;"
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ" style="width: 145px;"
                                             href="./ContactUs.html">Contact Us</a>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 125px;"
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ" style="width: 125px;"
                                             aria-current="page" href="./AboutUs.html">About
                                             Us</a>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 120px;"
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ" style="width: 120px;"
                                             href="./BanhMi.html">Banh Mi?</a>
                                     </div>
                                 </div>
@@ -69,7 +68,7 @@
                                 </h2>
                             </div>
                             <div class="row contactUsPaddingJ2 dontBeAfraidBodySizeJ sansCollectionJ">
-                                <p style="width: 87%;">Want to order a delicious banh mi? We’d love to serve you some
+                                <p>Want to order a delicious banh mi? We’d love to serve you some
                                     food. Here’s some
                                     information that’ll help you order a fantastic meal</p>
                             </div>
@@ -124,22 +123,22 @@
                             <div class="row contactBodyTopPaddingJ">
                                 9:00 am - 5:00 pm
                             </div>
-                            <div class="row">
+                            <div class="row contactRowPadding2J">
                                 9:00 am - 5:00 pm
                             </div>
-                            <div class="row redJ">
+                            <div class="row redJ contactRowPadding2J">
                                 CLOSED
                             </div>
-                            <div class="row">
+                            <div class="row contactRowPadding2J">
                                 9:00 am - 5:00 pm
                             </div>
-                            <div class="row">
+                            <div class="row contactRowPadding2J">
                                 9:00 am - 5:00 pm
                             </div>
-                            <div class="row">
+                            <div class="row contactRowPadding2J">
                                 9:00 am - 5:00 pm
                             </div>
-                            <div class="row" style="padding-bottom: 15px;">
+                            <div class="row contactRowPadding2J" style="padding-bottom: 15px;">
                                 9:00 am - 5:00 pm
                             </div>
                         </div>
@@ -153,14 +152,14 @@
                 <div class="card-body">
                     <h3 class="txtCenterJ dontBeAfraidBodySizeJ abrilFatfaceJ">ORDER OVER THE PHONE</h3>
                     <div class="centerJ contactBodyTopPaddingJ">
-                        <p class="card-text txtCenterJ contactUsBodySizeJ sansCollectionJ center " style="width: 70%;">
+                        <p class="card-text txtCenterJ contactUsBodySizeJ sansCollectionJ center " style="width: 80%;">
                             Interested in showing up and having your order ready for you? Give
                             us a call and give us your order over the phone</p>
                     </div>
 
                     <div class="centerJ">
                         <a href="" class="card-text txtCenterJ sansCollectionJ blueJ"
-                            style="padding-top: 25px; text-decoration: none;">(209) 475-0652</a>
+                            style="padding-top: 70px; text-decoration: none;">(209) 475-0652</a>
                     </div>
 
                 </div>
@@ -173,8 +172,8 @@
                 <div class="card-body">
                     <h3 class="txtCenterJ dontBeAfraidBodySizeJ abrilFatfaceJ">ORDER IN PERSON</h3>
                     <div class="centerJ">
-                        <p class="card-text txtCenterJ contactUsBodySizeJ sansCollectionJ contactBodyTopPaddingJ"
-                            style="width: 90%;">Are you not in the mood to make a phone call or you aren’t much of
+                        <p class="card-text txtCenterJ contactUsBodySizeJ sansCollectionJ contactBodyTopPaddingJ">
+                            Are you not in the mood to make a phone call or you aren’t much of
                             an online person? If so, that’s completely fine, feel free to head to our establishment and
                             order at the register</p>
                     </div>
