--- a/pages/Drinks.html
+++ b/pages/Drinks.html
@@ -107,35 +107,30 @@
             <div class="menuText">Ice Slushes</div>
             <div class="line" ></div>
         </div>
-        
+
         <br>
 
         <div id="carouselExample" class="carousel slide bgWhiteJ">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="row centerJ">
-                        <img class="reviewImgJ" src="./assets/Ellipse 1.png" alt="">
+                        <img class="reviewImgJ" src="../assets/Ellipse 1.png" alt="">
                     </div>
                     <div class="row centerJ">
-                        <img class="starJ" src="./assets/Star.png" alt="">
-                        <img class="starJ" src="./assets/Star.png" alt="">
-                        <img class="starJ" src="./assets/Star.png" alt="">
-                        <img class="starJ" src="./assets/Star.png" alt="">
-                        <img class="starJ" src="./assets/Star.png" alt="">
+                        <img class="starJ" src="../assets/Star.png" alt="">
+                        <img class="starJ" src="../assets/Star.png" alt="">
+                        <img class="starJ" src="../assets/Star.png" alt="">
+                        <img class="starJ" src="../assets/Star.png" alt="">
+                        <img class="starJ" src="../assets/Star.png" alt="">
                     </div>
                     <div class="row">
                         <p class="txtCenterJ">
-                            The BEST place to get banh mi and smoothies in Stockton. Their sandwiches are smaller
-                            compared to other restaurants but are packed with sooo much flavor. I usually go for the
-                            #3 grilled pork and maybe an occasional almond/avocado smoothie. Their boba is better
-                            than some shops that specialize in boba drinks. It's always chewy and sweet. This place
-                            is cash only and I've seen the same lady at the front register for years now. She's
-                            sweet and I could tell she is a hard worker. Always gotta support this place when I have
-                            a craving for it!!
+                            I never knew that finding a good boba drink would be a difficult thing until I found a bad one. This one though, restored the hope lol. On a serious note, their tapioca is amazing. I've been here about 3-4 times and I always order the honeydew with tapioca. Simply delicious!
+
                         </p>
                     </div>
                     <div class="row centerJ">
-                        <img class="quotesJ" src="./assets/Quotes.png" alt="">
+                        <img class="quotesJ" src="../assets/Quotes.png" alt="">
                     </div>
                     <div class="row">
                         <p class="txtCenterJ">Tina T</p>
@@ -144,35 +139,29 @@
                         <p class="txtCenterJ">Customer</p>
                     </div>
                     <div class="row centerJ">
-                        <img class="dotsJ" src="./assets/DotOutline.png" alt="">
-                        <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
-                        <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
+                        <img class="dotsJ" src="../assets/DotOutline.png" alt="">
+                        <img class="dotsJ" src="../assets/Dot No fill.png" alt="">
+                        <img class="dotsJ" src="../assets/Dot No fill.png" alt="">
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="row centerJ">
-                        <img class="reviewImgJ" src="./assets/Ellipse 1.png" alt="">
+                        <img class="reviewImgJ" src="../assets/Ellipse 1.png" alt="">
                     </div>
                     <div class="row centerJ">
-                        <img class="starJ" src="./assets/Star.png" alt="">
-                        <img class="starJ" src="./assets/Star.png" alt="">
-                        <img class="starJ" src="./assets/Star.png" alt="">
-                        <img class="starJ" src="./assets/Star.png" alt="">
-                        <img class="starJ" src="./assets/Star.png" alt="">
+                        <img class="starJ" src="../assets/Star.png" alt="">
+                        <img class="starJ" src="../assets/Star.png" alt="">
+                        <img class="starJ" src="../assets/Star.png" alt="">
+                        <img class="starJ" src="../assets/Star.png" alt="">
+                        <img class="starJ" src="../assets/Star.png" alt="">
                     </div>
                     <div class="row">
                         <p class="txtCenterJ">
-                            The BEST place to get banh mi and smoothies in Stockton. Their sandwiches are smaller
-                            compared to other restaurants but are packed with sooo much flavor. I usually go for the
-                            #3 grilled pork and maybe an occasional almond/avocado smoothie. Their boba is better
-                            than some shops that specialize in boba drinks. It's always chewy and sweet. This place
-                            is cash only and I've seen the same lady at the front register for years now. She's
-                            sweet and I could tell she is a hard worker. Always gotta support this place when I have
-                            a craving for it!!
+                            If you are searching for the best avocado boba drink in the world than search no more. This little sandwich & smoothie shop makes the perfect blend of ice, milk, sweetness, and real avocado. I have tried many other shops that have an avocado boba drink and they never live up to the deliciousness at 'Best Sandwiches & Smoothies'. For a few bucks you will taste heaven on earth. If you haven't tried this spot than you are just simply missing out! 5 stars and well deserved.
                         </p>
                     </div>
                     <div class="row centerJ">
-                        <img class="quotesJ" src="./assets/Quotes.png" alt="">
+                        <img class="quotesJ" src="../assets/Quotes.png" alt="">
                     </div>
                     <div class="row">
                         <p class="txtCenterJ">Tina T</p>
@@ -181,31 +170,25 @@
                         <p class="txtCenterJ">Customer</p>
                     </div>
                     <div class="row centerJ">
-                        <img class="dotsJ" src="./assets/DotOutline.png" alt="">
-                        <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
-                        <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
+                        <img class="dotsJ" src="../assets/DotOutline.png" alt="">
+                        <img class="dotsJ" src="../assets/Dot No fill.png" alt="">
+                        <img class="dotsJ" src="../assets/Dot No fill.png" alt="">
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="row centerJ">
-                        <img class="reviewImgJ" src="./assets/Ellipse 1.png" alt="">
+                        <img class="reviewImgJ" src="../assets/Ellipse 1.png" alt="">
                     </div>
                     <div class="row centerJ">
-                        <img class="starJ" src="./assets/Star.png" alt="">
-                        <img class="starJ" src="./assets/Star.png" alt="">
-                        <img class="starJ" src="./assets/Star.png" alt="">
-                        <img class="starJ" src="./assets/Star.png" alt="">
-                        <img class="starJ" src="./assets/Star.png" alt="">
+                        <img class="starJ" src="../assets/Star.png" alt="">
+                        <img class="starJ" src="../assets/Star.png" alt="">
+                        <img class="starJ" src="../assets/Star.png" alt="">
+                        <img class="starJ" src="../assets/Star.png" alt="">
+                        <img class="starJ" src="../assets/Star.png" alt="">
                     </div>
                     <div class="row">
                         <p class="txtCenterJ">
-                            The BEST place to get banh mi and smoothies in Stockton. Their sandwiches are smaller
-                            compared to other restaurants but are packed with sooo much flavor. I usually go for the
-                            #3 grilled pork and maybe an occasional almond/avocado smoothie. Their boba is better
-                            than some shops that specialize in boba drinks. It's always chewy and sweet. This place
-                            is cash only and I've seen the same lady at the front register for years now. She's
-                            sweet and I could tell she is a hard worker. Always gotta support this place when I have
-                            a craving for it!!
+                            I love coming here! Everything is sooooo yummy! Smoothies are on point! Especially the Thai tea, my favorite ! I've been coming here for years with my family & now my boyfriend as well.
                         </p>
                     </div>
                     <div class="row centerJ">
@@ -218,9 +201,9 @@
                         <p class="txtCenterJ">Customer</p>
                     </div>
                     <div class="row centerJ">
-                        <img class="dotsJ" src="./assets/DotOutline.png" alt="">
-                        <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
-                        <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
+                        <img class="dotsJ" src="../assets/DotOutline.png" alt="">
+                        <img class="dotsJ" src="../assets/Dot No fill.png" alt="">
+                        <img class="dotsJ" src="../assets/Dot No fill.png" alt="">
                     </div>
                 </div>
             </div>
@@ -236,20 +219,57 @@
             </button>
         </div>
 
+        <hr class="yellowJ hrLineJ mt-5">
 
+    <div class="container-fluid footerPaddingJ">
+        <div class="row">
+            <div class="col-3">
+                <div class="row yellowJ">
+                    <h2>Best Sandwiches</h2>
+                </div>
+                <div class="row yellowJ">
+                    <h2>& Smoothies</h2>
+                </div>
+            </div>
+            <div class="col-9">
+                <div class="row">
+                    <div class="col">
+                        <div class="row">
+                            <p class="yellowJ">Hours</p>
+                            <p class="yellowJ">Mon & Tue : 9 am - 5 pm</p>
+                            <p class="yellowJ">CLOSED WEDNESDAY</p>
+                            <p class="yellowJ">Thu - Sun : 9 am - 5pm</p>
+                        </div>
+                    </div>
 
+                    <div class="col">
+                        <div class="row">
+                            <p class="yellowJ">Contact Us</p>
+                            <p class="yellowJ">Mon & Tue : 9 am - 5 pm</p>
+                            <p class="yellowJ">CLOSED WEDNESDAY</p>
+                            <p class="yellowJ">Thu - Sun : 9 am - 5pm</p>
+                        </div>
+                    </div>
 
+                    <div class="col">
+                        <div class="row">
+                            <p class="yellowJ">Links</p>
+                        </div>
+                        <div class="row">
+                            <img src="" alt="">
+                            <img src="" alt="">
+                            <img src="" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
 
 
-
-
-
-
-
-
+    </div>
 
 
 
