--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -4,14 +4,328 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Drinks</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <div class="container-fluid">
+        <div class="row">
+                <div class="headBox"> <p>Top Sellers</p>  </div>
+        </div>
+
+        <div class="row bgWhite">
+            <div class="col topFive">
+                <div class="card " style="width: 12rem; border: 0px;">
+                    <img src="../assssssssssssssssssssssssets/Taro.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div>
+            </div>
+
+            <div class="col topFive">
+                <div class="card" style="width: 12rem; border: 0px;">
+                    <img src="../assssssssssssssssssssssssets/GreenTea.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div>
+            </div>
+
+            <div class="col topFive">
+                <div class="card" style="width: 12rem; border: 0px;">
+                    <img src="../assssssssssssssssssssssssets/ThaiTea.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div>
+            </div>
+
+            <div class="col topFive">
+                <div class="card" style="width: 12rem; border: 0px;">
+                    <img src="../assssssssssssssssssssssssets/Avocado.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div>
+            </div>
+
+            <div class="col topFive">
+                <div class="card" style="width: 12rem; border: 0px;">
+                    <img src="../assssssssssssssssssssssssets/HoneyDew.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div>
+            </div>
+            
+        </div>
+
+        <div class="row">
+                <div class="headBox"><p>Drinks</p></div>
+        </div>
+
+<br>
+<br>
+        <div class="row">
+            <div class="line" ></div>
+            <div class="menuText">Toppings</div>
+            <div class="line" ></div>
+        </div>
+
+        <br>
+<br>
+        <div class="row">
+            <div class="line" ></div>
+            <div class="menuText">Iced Pearl Drinks</div>
+            <div class="line" ></div>
+        </div>
+
+        <br>
+<br>
+        <div class="row">
+            <div class="line" ></div>
+            <div class="menuText">Specialty Drinks</div>
+            <div class="line" ></div>
+        </div>
+
+        <br>
+<br>
+        <div class="row">
+            <div class="line" ></div>
+            <div class="menuText">Smoothies</div>
+            <div class="line" ></div>
+        </div>
+
+        <br>
+<br>
+        <div class="row">
+            <div class="line" ></div>
+            <div class="menuText">Ice Slushes</div>
+            <div class="line" ></div>
+        </div>
+
+        <br>
+
+        <div id="carouselExample" class="carousel slide bgWhiteJ">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="row centerJ">
+                        <img class="reviewImgJ" src="./assets/Ellipse 1.png" alt="">
+                    </div>
+                    <div class="row centerJ">
+                        <img class="starJ" src="./assets/Star.png" alt="">
+                        <img class="starJ" src="./assets/Star.png" alt="">
+                        <img class="starJ" src="./assets/Star.png" alt="">
+                        <img class="starJ" src="./assets/Star.png" alt="">
+                        <img class="starJ" src="./assets/Star.png" alt="">
+                    </div>
+                    <div class="row">
+                        <p class="txtCenterJ">
+                            The BEST place to get banh mi and smoothies in Stockton. Their sandwiches are smaller
+                            compared to other restaurants but are packed with sooo much flavor. I usually go for the
+                            #3 grilled pork and maybe an occasional almond/avocado smoothie. Their boba is better
+                            than some shops that specialize in boba drinks. It's always chewy and sweet. This place
+                            is cash only and I've seen the same lady at the front register for years now. She's
+                            sweet and I could tell she is a hard worker. Always gotta support this place when I have
+                            a craving for it!!
+                        </p>
+                    </div>
+                    <div class="row centerJ">
+                        <img class="quotesJ" src="./assets/Quotes.png" alt="">
+                    </div>
+                    <div class="row">
+                        <p class="txtCenterJ">Tina T</p>
+                    </div>
+                    <div class="row">
+                        <p class="txtCenterJ">Customer</p>
+                    </div>
+                    <div class="row centerJ">
+                        <img class="dotsJ" src="./assets/DotOutline.png" alt="">
+                        <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
+                        <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row centerJ">
+                        <img class="reviewImgJ" src="./assets/Ellipse 1.png" alt="">
+                    </div>
+                    <div class="row centerJ">
+                        <img class="starJ" src="./assets/Star.png" alt="">
+                        <img class="starJ" src="./assets/Star.png" alt="">
+                        <img class="starJ" src="./assets/Star.png" alt="">
+                        <img class="starJ" src="./assets/Star.png" alt="">
+                        <img class="starJ" src="./assets/Star.png" alt="">
+                    </div>
+                    <div class="row">
+                        <p class="txtCenterJ">
+                            The BEST place to get banh mi and smoothies in Stockton. Their sandwiches are smaller
+                            compared to other restaurants but are packed with sooo much flavor. I usually go for the
+                            #3 grilled pork and maybe an occasional almond/avocado smoothie. Their boba is better
+                            than some shops that specialize in boba drinks. It's always chewy and sweet. This place
+                            is cash only and I've seen the same lady at the front register for years now. She's
+                            sweet and I could tell she is a hard worker. Always gotta support this place when I have
+                            a craving for it!!
+                        </p>
+                    </div>
+                    <div class="row centerJ">
+                        <img class="quotesJ" src="./assets/Quotes.png" alt="">
+                    </div>
+                    <div class="row">
+                        <p class="txtCenterJ">Tina T</p>
+                    </div>
+                    <div class="row">
+                        <p class="txtCenterJ">Customer</p>
+                    </div>
+                    <div class="row centerJ">
+                        <img class="dotsJ" src="./assets/DotOutline.png" alt="">
+                        <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
+                        <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row centerJ">
+                        <img class="reviewImgJ" src="./assets/Ellipse 1.png" alt="">
+                    </div>
+                    <div class="row centerJ">
+                        <img class="starJ" src="./assets/Star.png" alt="">
+                        <img class="starJ" src="./assets/Star.png" alt="">
+                        <img class="starJ" src="./assets/Star.png" alt="">
+                        <img class="starJ" src="./assets/Star.png" alt="">
+                        <img class="starJ" src="./assets/Star.png" alt="">
+                    </div>
+                    <div class="row">
+                        <p class="txtCenterJ">
+                            The BEST place to get banh mi and smoothies in Stockton. Their sandwiches are smaller
+                            compared to other restaurants but are packed with sooo much flavor. I usually go for the
+                            #3 grilled pork and maybe an occasional almond/avocado smoothie. Their boba is better
+                            than some shops that specialize in boba drinks. It's always chewy and sweet. This place
+                            is cash only and I've seen the same lady at the front register for years now. She's
+                            sweet and I could tell she is a hard worker. Always gotta support this place when I have
+                            a craving for it!!
+                        </p>
+                    </div>
+                    <div class="row centerJ">
+                        <img class="quotesJ" src="./assets/Quotes.png" alt="">
+                    </div>
+                    <div class="row">
+                        <p class="txtCenterJ">Tina T</p>
+                    </div>
+                    <div class="row">
+                        <p class="txtCenterJ">Customer</p>
+                    </div>
+                    <div class="row centerJ">
+                        <img class="dotsJ" src="./assets/DotOutline.png" alt="">
+                        <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
+                        <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+        <hr class="yellowJ hrLineJ mt-5">
+
+    <div class="container-fluid footerPaddingJ">
+        <div class="row">
+            <div class="col-3">
+                <div class="row yellowJ">
+                    <h2>Best Sandwiches</h2>
+                </div>
+                <div class="row yellowJ">
+                    <h2>& Smoothies</h2>
+                </div>
+            </div>
+            <div class="col-9">
+                <div class="row">
+                    <div class="col">
+                        <div class="row">
+                            <p class="yellowJ">Hours</p>
+                            <p class="yellowJ">Mon & Tue : 9 am - 5 pm</p>
+                            <p class="yellowJ">CLOSED WEDNESDAY</p>
+                            <p class="yellowJ">Thu - Sun : 9 am - 5pm</p>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="row">
+                            <p class="yellowJ">Contact Us</p>
+                            <p class="yellowJ">Mon & Tue : 9 am - 5 pm</p>
+                            <p class="yellowJ">CLOSED WEDNESDAY</p>
+                            <p class="yellowJ">Thu - Sun : 9 am - 5pm</p>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="row">
+                            <p class="yellowJ">Links</p>
+                        </div>
+                        <div class="row">
+                            <img src="" alt="">
+                            <img src="" alt="">
+                            <img src="" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
