--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -22,33 +22,31 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse centerJ" id="navbarNavAltMarkup">
-                        <div class="" style="width: 100%;">
+                        <div class="" style="width: 100%">
                             <div class="row">
                                 <div class="col centerJ">
-                                    <div class="row evenJ" style="width: 700px; padding-top: 40px;">
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ" style="width: 75px;"
-                                            href="./Menu.html">Menu</a>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ" style="width: 145px;"
-                                            href="./ContactUs.html">Contact Us</a>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ" style="width: 125px;"
-                                            aria-current="page" href="./AboutUs.html">About
-                                            Us</a>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ" style="width: 120px;"
-                                            href="./BanhMi.html">Banh Mi?</a>
+                                    <div class="row evenJ" style="width: 700px; padding-top: 40px">
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ"
+                                            style="width: 75px" href="./Menu.html">Menu</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ"
+                                            style="width: 125px" aria-current="page" href="./AboutUs.html">About Us</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ"
+                                            style="width: 145px" href="./ContactUs.html">Contact Us</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ sansCollectionJ"
+                                            style="width: 120px" href="./BanhMi.html">Banh Mi?</a>
                                     </div>
                                 </div>
 
                                 <div class="col-1 centerJ">
                                     <a href="../index.html"><img class="logoSizeJ" src="../assets/bestSandwich logo.png"
-                                            alt=""></a>
+                                            alt="" /></a>
                                 </div>
                                 <div class="col yugiJ alignCenterJ">
-                                    <h1 style="width: 100%" class="txtCenterJ titleFontJ yellowJ">Best Sandwiches &
-                                        Smothies</h1>
+                                    <h1 style="width: 100%" class="txtCenterJ titleFontJ yellowJ">
+                                        Best Sandwiches & Smothies
+                                    </h1>
                                 </div>
-
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -190,7 +188,7 @@
 
 
 
-    <hr class="yellowJ hrLineJ mt-3">
+    <hr class="yellowJ hrLineJ mt-4">
 
     <div class="container-fluid footerPaddingJ">
         <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
